# YOMI-AI

./: YOMI-AI.cabal  cabal.project  readme.md
app/: Main.hs
data/: hwModel.model  settings.json
src/: Model.hs  Settings.hs  Training.hs  Utils.hs
